Fix image poopUp layout bug
Fix bug when PopUp is active then image is
bigger than viewport of browser. And add cursors
zoom in to image i pointer to close PopUp button.

--- a/src/components/picture/picture.module.scss
+++ b/src/components/picture/picture.module.scss
@@ -1,6 +1,8 @@
 .imageWrapper {
 	margin-top: 1.6rem;
 	width: 70%;
+	height: 80vh;
+	max-height: 80vh;
 
 	@media (max-width: 1024px) {
 		width: 95%;
@@ -9,6 +11,10 @@
 		width: 100%;
 		height: 100%;
 		object-fit: contain;
+		cursor: zoom-in;
+		&:hover {
+			background-color: #24242489;
+		}
 	}
 }
 
@@ -18,6 +24,7 @@
 	align-items: center;
 	width: 100%;
 	height: 100vh;
+	max-height: 100vh;
 	z-index: 4;
 	position: fixed;
 	left: 50%;
@@ -28,7 +35,9 @@
 
 	img {
 		width: 100%;
+		max-height: 100vh;
 		object-fit: contain;
+		cursor: zoom-in;
 	}
 }
 
@@ -44,6 +53,7 @@
 	border-radius: 30%;
 
 	img {
+		cursor: pointer;
 		width: 100%;
 		height: 100%;
 	}
